trunk/GRF Installation/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>grf01_Chapter_Background__c</fullName>
        <label>Chapter Background</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>grf01_Chapter_Status__c</fullName>
        <label>Chapter_Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active Chapter</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive Chapter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>grf01_Interest_in_Becoming_a_Chapter__c</fullName>
        <label>Interest in Becoming a Chapter</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>grf01_system_Lead_Type__c</fullName>
        <label>_system: Lead Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Chapter</fullName>
        <active>true</active>
        <description>Use this for a Fundraising Chapter</description>
        <label>Chapter</label>
    </recordTypes>
</CustomObject>